footer text align fixed

--- a/src/components/footer/styles.module.scss
+++ b/src/components/footer/styles.module.scss
@@ -19,6 +19,7 @@
     align-items: center;
     color: $white;
     margin: 0 20px;
+    text-align: center;
 
     span {
       margin-right: 10px;
